Change links from http:// to https://, fix broken link